--- a/ui/package.json
+++ b/ui/package.json
@@ -25,7 +25,7 @@
     "react-router-dom": "^6.2.1"
   },
   "scripts": {
-    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
+    "start": "set NODE_OPTIONS =--openssl-legacy-provider && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --testURL='http://localhost:7575'",
     "eject": "react-scripts eject",
