--- a/ui/package.json
+++ b/ui/package.json
@@ -26,6 +26,7 @@
   },
   "scripts": {
     "start": "set NODE_OPTIONS =--openssl-legacy-provider && react-scripts start",
+    "install": "set NODE_OPTIONS =--legacy-peer-deps",
     "build": "react-scripts build",
     "test": "react-scripts test --testURL='http://localhost:7575'",
     "eject": "react-scripts eject",
